[project]
name = "dbricks_lang_agent"
version = "0.1.0"
description = "Databricks and LangGraph governed by Unity Catalog Medallion Pipeline Agent"
authors = [{ name = "Venkatesan" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "langgraph>=0.1.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "databricks-sdk>=0.28.0",
    "pyspark==3.5.1",
    "delta-spark==3.2.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbricks_lang_agent"]
